--- a/_config.yml
+++ b/_config.yml
@@ -3,16 +3,17 @@
 #
 
 # Name of your site (displayed in the header)
-name: Reverie
+name: rivea0
 
 # Name of the author
-author: Amit Merchant
+author: Eda Eren
 
 # Short bio or description (displayed in the header)
-description: An elegant Jekyll theme
+description: Notes to myself of things I learned, discovered, or read about programming and computer science as a beginner – things I want to remember.
+
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: /images/reverie.png
+avatar: 
 
 #
 # Flags below are optional
@@ -48,14 +49,14 @@ google_analytics: UA-43339302-11
 
 # Your website URL (e.g. http://amitmerchant1990.github.io or http://www.amitmerchant.com)
 # Used for Sitemap.xml and your RSS feed
-url: http://www.amitmerchant.com/reverie
-enforce_ssl: https://www.amitmerchant.com/reverie
+url: http://www.rivea0.github.io/blog
+enforce_ssl: https://www.rivea0.github.io/blog
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: "/reverie"
+baseurl: "/blog"
 
 #
 # !! You don't need to change any of the configuration flags below !!
