--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: rivea0
 author: Eda Eren
 
 # Short bio or description (displayed in the header)
-description: Notes to myself of things I learned, discovered, or read about programming and computer science as a beginner – simply, things I want to remember.
+description: Notes of things I learned, discovered, or read about programming and computer science as a <beginner> – simply, things I want to remember.
 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
